<resources>
    <string name="app_name">App Intents Servicos</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="endereco">Endereço:</string>
    <string name="tela2">Dados cadastrados:</string>
    <string name="botao">Cadastrar</string>
    <string name="atencao">
        ATENÇÃO! \n Clique no campo de telefone para fazer a ligação
        ou usar o Whatsapp, no de e-mail para enviar uma mensagem e no
        mapa para abrir no Google Maps.
    </string>
</resources>